force-app/main/default/objects/Wallet_Set__c/Wallet_Set__c.object-meta.xml
<CustomObject>
    <label>Wallet Set</label>
    <nameField>
        <displayFormat>WS-{0000}</displayFormat>
        <label>Wallet Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wallet Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>