force-app/main/default/objects/Wallet_Set__c/fields/Root_Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Root_Private_Key__c</fullName>
    <label>Root Private Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>