force-app/main/default/objects/Wallet_Set__c/fields/Seed_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Seed_Phrase__c</fullName>
    <description>The Seed Phrase to Generate Wallets</description>
    <label>Seed Phrase</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>