force-app/main/default/objects/Wallet_Set__c/fields/Wallet_Name__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Name__c</fullName>
    <label>Wallet Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>